[package]
name = "death-screen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"


[profile.release.package."*"]
opt-level = "z"



[dependencies]
public-ip = "0.2"
bevy = {version = "0.11.0"}
tokio = "1.29.1"
wallpaper = {version = "*", features = ["from_url"]}


[features]
default = ["fast-compile"]
fast-compile = ["bevy/dynamic_linking"]
